# discord-notify

./: CHANGELOG.md  README.md  mise.toml  pyproject.toml
src/discord_notify/: __init__.py  webhook.py
tests/: test_webhook.py
