[project]
name = "discord-notify"
version = "0.1.2"
description = "Minimal Discord webhook client with zero external dependencies"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["^build/", "^\\.venv/"]

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.14",
]
